--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
     <script>
       
-const audio = new Audio('welcome.mp3');
+const audio = new Audio('takbir.mp3');
 audio.loop = true;
 
 // Button control
